--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       <blockquote id="instrucct"><h4>Instrucciones</h4><br>
         - La visulización se carga automaticamente y queda a la espera que el usuario explore su funcionamiento. 
           Los datos fueron descargados de manera que su acceso sea indeendiente de los seridores fuente.
-        - Pase el cursor del mouse sobre cada tema de la columna central para visualizar las cantdades en kilos importadas a Colombia en cada año.<br>- Haga clic sobre la barra correspondiente a cada año  para consultar los productos y su comportamiento en ese año en particular.<br>
+        - Pase el cursor del mouse sobre cada tema de la columna central para visualizar las cantdades en kilos importadas a Colombia en cada año.<br>
+        - Haga clic sobre la barra correspondiente a cada año  para consultar los productos y su comportamiento en ese año en particular.(esto puede tomar unos segundos)<br>
     </blockquote><br>
   </div>
 
