--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
          <table id="instrucct">
           <tr><td>
-            Analyze - Consume- Discover >> Distribution<br>
+            Analyze - Consume- Discover >> Distribution/tendencia<br>
             Search - Browse  >> Features<br>
             Sumarize >> Features<br>
             </td></tr>
@@ -63,7 +63,7 @@
       <li><b><i>HOW</li></b>
          <table id="instrucct">
         <th>Marcas y Canales</th>
-        <tr><td>Marca</td><td>Canale</td></tr>
+        <tr><td>Area</td><td>Canale</td></tr>
         <tr><td>Line</td><td>Color-Hue</td></tr>
         <tr><td>-- --</td><td>Pos X</td></tr>
         <tr><td>-- -- </td> <td>Pos Y</td></tr>
